tests/example_policies/namedPorts/namedPorts-policy5.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test_named_ports_warnings
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      app: helm
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            tier: frontend
      ports:
      - port: tbd
        protocol: TCP
    - from:
      - podSelector:
          matchLabels:
            tier: frontend
      ports:
      - port: tiller
        protocol: UDP
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              unique-label: dummy
      ports:
      - port: tiller
        protocol: TCP
      - port: metrics
        protocol: UDP
