tests/example_policies/namedPorts/namedPorts-scheme.yaml
namespaceList: ../../example_podlist/ns_list.json
podList: ../../example_podlist/pods_list.json

networkConfigList:
  - name: np1
    networkPolicyList:
      - namedPorts-policy1.yaml
    expected_warnings: 0

  - name: np2
    networkPolicyList:
      - namedPorts-policy2.yaml
    expected_warnings: 0

  - name: np3
    networkPolicyList:
      - namedPorts-policy3.yaml
    expected_warnings: 0

  - name: np4
    networkPolicyList:
      - namedPorts-policy4.yaml
    expected_warnings: 0

  - name: np5 # just for warnings
    networkPolicyList:
      - namedPorts-policy5.yaml
    expected_warnings: 5

queries:
  - name: compare_np1_and_np2
    strongEquivalence:
      - np1
      - np2
    expected: 1
  - name: compare_np3_and_np4
    equivalence:
      - np3
      - np4
    expected: 0
